yet another theme from Emacs (zenburn)

--- a/src/css/ymacs-dark.css
+++ b/src/css/ymacs-dark.css
@@ -8,6 +8,7 @@
 @import url("themes/emacs-calm-forest.css");
 @import url("themes/emacs-linh-dang-dark.css");
 @import url("themes/emacs-blue-mood.css");
+@import url("themes/emacs-zenburn.css");
 @import url("themes/emacs-standard-dark.css");
 
 .Ymacs-Theme-dark .Ymacs-caret {
