--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -4,7 +4,12 @@
 .Ymacs_Frame {
   white-space: pre;
   font-family: "Lucida Sans Typewriter",monospace;
+  overflow: hidden;
   /* font-size: 14px; */
+}
+
+.Ymacs-frame-overlays {
+  overflow: auto;
 }
 
 .Ymacs-frame-content div.line {
@@ -21,6 +26,8 @@
 }
 
 .Ymacs_Minibuffer .Ymacs-caret { background-color: inherit; color: inherit; }
+
+.Ymacs_Minibuffer .Ymacs_Modeline { display: none; }
 
 /* .Ymacs_Frame-hasOverlays .Ymacs-current-line { */
 /*   background: transparent !important; */
