fixed overlay problem (should be relative to the text container)

--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -10,9 +10,10 @@
 
 .Ymacs-frame-overlays {
   overflow: auto;
+  position: relative;
 }
 
-.Ymacs-frame-content div.line {
+.Ymacs-frame-content {
   white-space: pre;
 }
 
