DejaVu looks better

--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -3,7 +3,7 @@
 
 .Ymacs_Frame {
   white-space: pre;
-  font-family: "Lucida Sans Typewriter",monospace;
+  font-family: "DejaVu Sans Mono","Lucida Sans Typewriter",monospace;
   overflow: hidden;
 }
 
