Improved the frame layout code (got rid of some unnecessary containers, thanks to new DlLayout::replaceWidget()).  Added delete_frame on "C-x 0".

--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -57,6 +57,7 @@
   font-family: "Lucida Sans Typewriter",monospace;
   white-space: pre;
   padding-bottom: 1px;
+  overflow: hidden;
 }
 
 .Ymacs_Modeline:after {
