--- a/src/css/ymacs-light.css
+++ b/src/css/ymacs-light.css
@@ -30,6 +30,7 @@
 
 .Ymacs-Theme-light .Ymacs_Overlay .match-paren { background: #080; }
 .Ymacs-Theme-light .Ymacs_Overlay .selection { background: #88f; opacity: 0.8; }
+.Ymacs-Theme-light .Ymacs_Overlay .isearch { background: #a22; }
 
 .Ymacs-Theme-light .Ymacs_Modeline {
   background-color: #777;
