--- a/src/css/ymacs-dark.css
+++ b/src/css/ymacs-dark.css
@@ -1,5 +1,6 @@
 @import url("ymacs-syntax-dark.css");
 
+@import url("themes/emacs-mishoo.css");
 @import url("themes/emacs-billw.css");
 @import url("themes/emacs-charcoal-black.css");
 @import url("themes/emacs-clarity-and-beauty.css");
