--- a/test/dl/css/default.css
+++ b/test/dl/css/default.css
@@ -492,7 +492,7 @@ div.DlVMenu-separator {
 
 /* Notebook */
 
-.DlNotebook { background-color: #d8c8f8; }
+/* .DlNotebook { background-color: #d8c8f8; } */
 
 /* Tabs */
 
