--- a/src/css/ymacs-dark.css
+++ b/src/css/ymacs-dark.css
@@ -14,11 +14,13 @@
 
 .Ymacs-Theme-dark .Ymacs-caret {
   background-color: #aaa;
+  /* outline: 1px solid #f83; */
 }
 
 .Ymacs-Theme-dark .Ymacs_Frame-focus .Ymacs-caret {
   background-color: #f83;
   color: #324 !important;
+  /* outline: none; */
 }
 
 .Ymacs-Theme-dark .Ymacs_Frame-focus .Ymacs-current-line {
