--- a/test/dl/css/default-magenta-ds.css
+++ b/test/dl/css/default-magenta-ds.css
@@ -176,7 +176,8 @@ div.DlButton-Label { display: inline; }
 .DlEntry-ValidationError input, .DlEntry-ValidationError textarea { background-color: #f2d9df; }
 .DlEntry-Readonly .DlEntry-cell { background-color: #efdaf3; border-bottom-color: #f7e6f6; border-right-color: #f7e6f6; }
 .DlEntry-Readonly input, .DlEntry-Readonly textarea { background-color: #efdaf3; }
-.DlEntry-empty input, .DlEntry-empty textarea { color: #a393a3; font-style: italic; }
+.DlEntry-emptyText { display: none; position: absolute; left: 3px; top: 1px; color: #a393a3; font-style: italic; cursor: text; }
+.DlEntry-empty .DlEntry-emptyText { display: block; }
 
 .DlEntry-dropDownBtn {
   line-height: 20px;
@@ -186,6 +187,26 @@ div.DlButton-Label { display: inline; }
 
 .DlEntry-dropDownBtn-hover { background-color: #ffffff; }
 .DlEntry-dropDownBtn-active { background-color: #956da7; }
+
+.DlEntry-invalidIcon {
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  right: 1px;
+  top: 50%;
+  margin-top: -8px;
+  background-image: url("img/entry-warning.png");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  opacity: 0.6;
+  display: none;
+}
+
+div.DlEntry-invalidIcon:hover { opacity: 1; }
+
+.DlEntry-ValidationError .DlEntry-invalidIcon {
+  display: block;
+}
 
 
 
@@ -849,8 +870,8 @@ table.DlButtonBox .DlButtonBox-spacer { width: 100%; }
 }
 
 .DlDialog .DlWM-modalStopper {
-  -moz-border-radius: 0 0 4px 4px;
-  -webkit-border-radius: 0 0 4px 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
 }
 
 .DlWM-hasModals { width: 100%; height: 100%; }
