--- a/test/dl/css/default.css
+++ b/test/dl/css/default.css
@@ -178,7 +178,8 @@ div.DlButton-Label { display: inline; }
 .DlEntry-ValidationError input, .DlEntry-ValidationError textarea { background-color: #ffccd9; }
 .DlEntry-Readonly .DlEntry-cell { background-color: #dcf; border-bottom-color: #edf; border-right-color: #edf; }
 .DlEntry-Readonly input, .DlEntry-Readonly textarea { background-color: #dcf; }
-.DlEntry-empty input, .DlEntry-empty textarea { color: #98a; font-style: italic; }
+.DlEntry-emptyText { display: none; position: absolute; left: 3px; top: 1px; color: #98a; font-style: italic; cursor: text; }
+.DlEntry-empty .DlEntry-emptyText { display: block; }
 
 .DlEntry-dropDownBtn {
   line-height: 20px;
@@ -188,6 +189,26 @@ div.DlButton-Label { display: inline; }
 
 .DlEntry-dropDownBtn-hover { background-color: #fff; }
 .DlEntry-dropDownBtn-active { background-color: #76c; }
+
+.DlEntry-invalidIcon {
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  right: 1px;
+  top: 50%;
+  margin-top: -8px;
+  background-image: url("img/entry-warning.png");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  opacity: 0.6;
+  display: none;
+}
+
+div.DlEntry-invalidIcon:hover { opacity: 1; }
+
+.DlEntry-ValidationError .DlEntry-invalidIcon {
+  display: block;
+}
 
 /* CompletionEntry */
 
@@ -870,8 +891,8 @@ table.DlButtonBox .DlButtonBox-spacer { width: 100%; }
 }
 
 .DlDialog .DlWM-modalStopper {
-  -moz-border-radius: 0 0 4px 4px;
-  -webkit-border-radius: 0 0 4px 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
 }
 
 .DlWM-hasModals { width: 100%; height: 100%; }
