minor fix: foo.toSource(); bar.to<dabbrev_expand> didn't properly complete.

--- a/src/css/ymacs-dark.css
+++ b/src/css/ymacs-dark.css
@@ -44,7 +44,7 @@
 }
 
 .Ymacs-Theme-dark .Ymacs_Frame-active .Ymacs_Modeline {
-  background-color: #cbe;
+  background-color: #bbb;
   color: #000;
   border-top: 1px solid #fff;
 }
