--- a/src/css/ymacs-light.css
+++ b/src/css/ymacs-light.css
@@ -40,7 +40,7 @@
 }
 
 .Ymacs-Theme-light .Ymacs_Frame-active .Ymacs_Modeline {
-  background-color: #cbe;
+  background-color: #bbb;
   color: #000;
   border-top: 1px solid #fff;
 }
