new DL build, updated (c) years

--- a/test/dl/new-theme/default.css
+++ b/test/dl/new-theme/default.css
@@ -1335,6 +1335,15 @@ table.DlButtonBox .DlButtonBox-spacer {
   text-indent: 5px;
   /* the "LOL" way to add horizontal padding. :-p */ }
 
+.DlDataGrid-noIndent .DlDataGrid-Body td {
+  text-indent: 0; }
+
+.DlDataGrid-valignTop .DlDataGrid-Body td {
+  vertical-align: top; }
+
+.DlDataGrid-valignBottom .DlDataGrid-Body td {
+  vertical-align: bottom; }
+
 .DlDataGrid-Body .DlDataGrid-rowTable {
   border-bottom: 1px solid #f0f0f4;
   user-select: none;
